# cpputils

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  circular_buffer.h  default_allocator.h  omake.lua  skiplist.h  text_utils.cpp  text_utils.h
include/cpputils/: allocator.h  assert.h  circular_buffer.h  compact_addr_manager.h  compact_memory_manager.h  file_mapping.h  generic_cpu_allocator.h  guard.h  intrusive_list.h  intrusive_list_node.h  ring_buffer.h  robin_hood_hash_mem.h  robin_hood_hash_pod.h  skiplist.h  string_utils.h  text_utils.h  time_utils.h
src/: compact_addr_manager.cpp  compact_memory_manager.cpp  file_mapping.cpp  string_utils.cpp  text_utils.cpp
tests/: CMakeLists.txt  Makefile  omake.lua  test.cpp  test_circular_buffer.cpp  test_compact_addr_manager.cpp  test_compact_memory_manager.cpp  test_file_mapping.cpp  test_intrusive_list.cpp  test_ring_buffer.cpp  test_robin_hood_hash_mem.cpp  test_robin_hood_hash_perf.cpp  test_robin_hood_hash_pod.cpp  test_skiplist.cpp  test_skiplist_set.cpp  test_string_utils.cpp  test_text_utils.cpp
